[package]
name = "solanaut"
version = "0.1.0"
edition = "2021"
description = "Human-readable Solana transaction decoder. Paste a tx signature, see what actually happened."
license = "MIT"
repository = "https://github.com/user/solanaut"

[[bin]]
name = "solanaut"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
solana-client = "2"
solana-sdk = "2"
solana-transaction-status = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
base64 = "0.22"
bs58 = "0.5"
sha2 = "0.10"
openssl = { version = "0.10", features = ["vendored"] }
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tokio-test = "0.4"
